reorganizacao das pastas e execicio02 concluido

--- a/exercicios/ex01/Dockerfile
+++ b/exercicios/ex01/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu
-RUN ["apt", "-y", "update"]
-RUN ["apt", "-y", "install", "nmap"]
+RUN ["apt-get", "-y", "update"]
+RUN ["apt-get", "-y", "install", "nmap"]
 ENTRYPOINT ["nmap", "-p", "1-1000", "-sV", "-sS", "-T4"]
 CMD ["127.0.0.1"]
